--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,7 @@
 
 .header {
-    background: url(../images/header-bg.jpg) no-repeat center top;
+    /*background: url(../images/header-bg.jpg) no-repeat center top;*/
+    background: rgba(0,0,0,.8);
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
